--- a/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
+++ b/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
@@ -1,7 +1,7 @@
 <form>
     <div class="form-group">
         <label>Email address</label>
-        <input type="email" name="email" [(ngModel)]="forgotPasswordModel.email" class="form-control" placeholder="Enter email">
+        <input type="email" name="email" [(ngModel)]="forgotPasswordModel.email" [readonly]="setEmailReadonly" class="form-control" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group" *ngIf="resetPasswordModel.code">
@@ -15,8 +15,8 @@
     <button type="submit" class="btn btn-primary" (click)="validateEmail()">Submit</button>
 </form>
 
-<p>email : {{ resetPasswordModel.email }}</p>
+<!--<p>email : {{ resetPasswordModel.email }}</p>
 <p>password : {{ resetPasswordModel.password }}</p>
 <p>confirmpassword : {{ resetPasswordModel.confirmpassword }}</p>
-<p>code : {{ resetPasswordModel.code }}</p>
-<p>info : {{ infomation }}</p>
+<p>code : {{ resetPasswordModel.code }}</p>-->
+<p *ngIf="information" class="text-danger">{{ information }}</p>
