add link register

--- a/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
+++ b/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
@@ -15,8 +15,8 @@
     <button type="submit" class="btn btn-primary" (click)="validateEmail()">Submit</button>
 </form>
 
-<!--<p>email : {{ resetPasswordModel.email }}</p>
+<p>email : {{ resetPasswordModel.email }}</p>
 <p>password : {{ resetPasswordModel.password }}</p>
 <p>confirmpassword : {{ resetPasswordModel.confirmpassword }}</p>
-<p>code : {{ resetPasswordModel.code }}</p>-->
+<p>code : {{ resetPasswordModel.code }}</p>
 <p *ngIf="information" class="text-danger">{{ information }}</p>
