--- a/WebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/WebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -32,6 +32,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Forgot Password
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/register-user']">
+                        <span class='glyphicon glyphicon-th-list'></span> Register User
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
