--- a/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
+++ b/WebUI/ClientApp/app/components/forgotpassword/forgotpassword.component.html
@@ -1,22 +1,11 @@
-<form>
+<form *ngIf="!successMessage">
     <div class="form-group">
         <label>Email address</label>
-        <input type="email" name="email" [(ngModel)]="forgotPasswordModel.email" [readonly]="setEmailReadonly" class="form-control" placeholder="Enter email">
+        <input type="email" name="email" [(ngModel)]="forgotPasswordModel.email" class="form-control" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <div class="form-group" *ngIf="resetPasswordModel.code">
-        <label>New Password</label>
-        <input type="password" name="password" [(ngModel)]="resetPasswordModel.password" class="form-control" placeholder="Enter email">
-    </div>
-    <div class="form-group" *ngIf="resetPasswordModel.code">
-        <label>Confirm Password</label>
-        <input type="password" name="confirmpassword" [(ngModel)]="resetPasswordModel.confirmpassword" class="form-control" placeholder="Enter email">
-    </div>
-    <button type="submit" class="btn btn-primary" (click)="validateEmail()">Submit</button>
+    <button type="submit" class="btn btn-primary" (click)="validateEmail()" [disabled]="disableButton">Submit</button>
 </form>
 
-<p>email : {{ resetPasswordModel.email }}</p>
-<p>password : {{ resetPasswordModel.password }}</p>
-<p>confirmpassword : {{ resetPasswordModel.confirmpassword }}</p>
-<p>code : {{ resetPasswordModel.code }}</p>
-<p *ngIf="information" class="text-danger">{{ information }}</p>
+<p *ngIf="errorMessage" [hidden]="successMessage || forgotPasswordModel.email" class="text-danger">{{ errorMessage }}</p>
+<h1 *ngIf="successMessage" class="text-success"> {{ successMessage }} </h1>
