--- a/WebUI/ClientApp/app/components/user-profile/user-profile.component.html
+++ b/WebUI/ClientApp/app/components/user-profile/user-profile.component.html
@@ -1,14 +1,32 @@
-<div class="card hovercard">
-    <div class="cardheader">
-    </div>
-    <div class="avatar">
-        <img alt="" [src]="model.avatarURL">
-    </div>
-    <div class="info">
-        <div class="title">
-            <a target="_blank" href="http://scripteden.com/"> {{ model.email }} </a>
-        </div>
-        <div class="desc">{{ model.userName }}</div>
-        <div class="desc">{{ model.avatarURL }}</div>
-    </div>
+<div  *ngIf="!editAvatar">
+    <h1>Avatar ne</h1>
+    <img class="col-md-4" [src]="model.avatarURL" style=" width: 250px; height: 200px">
+    <button id="btnEdit" name="btnEdit" class="btn btn-primary" (click)="OnEdit(true)">Edit</button>
 </div>
+<form class="form-horizontal" name="form" #imageForm="ngForm" (ngSubmit)="OnSubmit(UserName,Image)" *ngIf="editAvatar">
+    <h1>Edit Profile</h1>
+    <div class="form-group">
+        <img class="col-md-4" [src]="imageUrl" style=" width: 250px; height: 200px">
+        <div class="col-md-4">
+            <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)" required/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="textinput">Email</label>
+        <div class="col-md-4">
+            <input id="email" name="email" placeholder="" class="form-control input-md" type="text" [ngModel]="model.email" disabled>
+
+        </div>
+    </div>
+    <!-- Button (Double) -->
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="btnCancel">Save Marker</label>
+        <div class="col-md-8">
+            <button id="btnCancel" name="btnCancel" class="btn btn-primary" (click)="OnEdit(false)">Cancel</button>
+           <button id="btnSave" name="btnSave" class="btn btn-success">Save</button>
+        </div>
+    </div>
+</form>
+
+
+
