--- a/WebUI/ClientApp/app/components/resetpassword/resetpassword.component.html
+++ b/WebUI/ClientApp/app/components/resetpassword/resetpassword.component.html
@@ -1,7 +1,7 @@
 <form *ngIf ="!successMessage">
     <div class="form-group">
         <label>Email address</label>
-        <input type="email" name="email" [(ngModel)]="resetPasswordModel.email" readonly="true" class="form-control" placeholder="Enter email">
+        <input type="email" name="email" [ngModel]="resetPasswordModel.email" readonly="true" class="form-control" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
