--- a/WebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/WebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -38,7 +38,7 @@
                         <span class='glyphicon glyphicon-th-list'></span> User Proflie
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']" *ngIf="((isLoggedIn$ | async) && (!isRoleAdmin$ | async))">
+                <li [routerLinkActive]="['link-active']" *ngIf="((isLoggedIn$ | async) && (isRoleAdmin$ | async))">
                     <a [routerLink]="['/list-agent']">
                         <span class='glyphicon glyphicon-th-list'></span> List Agent
                     </a>
