--- a/WebUI/ClientApp/app/components/registeruser/registeruser.component.html
+++ b/WebUI/ClientApp/app/components/registeruser/registeruser.component.html
@@ -1,18 +1,23 @@
 <form #userlogin="ngForm" (ngSubmit)="onClickSubmit(userlogin.value)">
     <div class="form-group">
-        <label class="label label-danger">{{sMsg}}</label>
+        <label class="text-danger">{{sUserislog}}</label>
+        <label class="text-success">{{sMsgsc}}</label>
+        <label class="text-danger">{{err}}</label>
     </div>
     <div class="form-group">
         <label>Email address</label>
         <input type="email" class="form-control" name="Email" placeholder="Email" ngModel>
+        <label class="text-danger">{{email}}</label>
     </div>
     <div class="form-group">
         <label>Password</label>
         <input type="password" class="form-control" name="Password" placeholder="Password" ngModel>
+        <label class="text-danger">{{password}}</label>
     </div>
     <div class="form-group">
-        <label>Password</label>
+        <label>Confirm password</label>
         <input type="password" class="form-control" name="ConfirmPassword" placeholder="Password" ngModel>
+        <label class="text-danger">{{confirmpassword}}</label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
